completed functional version

--- a/frontend/src/css/postlist.css
+++ b/frontend/src/css/postlist.css
@@ -1,16 +1,26 @@
 #posts {
-	border: 1px solid blue;
+	border-radius: 5px;
 	width: 70%;
 	margin-top: 0;
-	background-color: green;
+	background-color: #978897;
 	margin-bottom: 30px;
+	padding: 20px;
 }
 
 
 .postlist-content {
 	width: 100%;
 	padding: 30px;
+	border-bottom: 1px solid rgb(0, 0, 0);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+	-webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box;
 }
+
+.postlist-content:last-child {
+	border-bottom: none;
+}
+
 .postlist-header {
 	width: 100%;
 	margin-bottom: 50px;
@@ -29,8 +39,20 @@
 
 .postlist-footer-row {
 	width: 100%;
+
 }
 
 .postlist-footer-row-column2 {
 	float: right;
 }
+
+.post-title {
+	color: #2C2C34;
+	text-decoration: none;
+}
+
+.post-title:hover{
+	color: #D8D8F6;
+	text-decoration: underline;
+}
+
