--- a/frontend/src/css/postdetail.css
+++ b/frontend/src/css/postdetail.css
@@ -1,9 +1,9 @@
-.postdetail-grid {
-	margin: 0 auto;
-	width: 60%;
-	background-color: #E1DEE3;
-	color: #3A4F41;
-	padding: 30px;
+.postdetail-container {
+	background-color: #F5F5F5;
+    -moz-box-shadow:    3px 3px 5px 6px #ccc;
+    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    box-shadow: 3px 3px 5px 6px #ccc;
+    padding: 50px;
 }
 
 
@@ -39,6 +39,23 @@
 
 }
 
+.postdetail-newcomment-modal input {
+	border-radius: 5px;
+	height: 25px;
+	width: 60%;
+}
+
+.postdetail-newcomment-modal textarea {
+	border-radius: 5px;
+	width: 60%;
+}
+
+.postdetail-newcomment-modal .submit-modal {
+	border-radius: 5px;
+	width: 60%;
+	padding: 15px 30px;
+}
+
 .postdetail-newcomment-overlay {
 	position: fixed;
 	top: 0;
@@ -47,8 +64,4 @@
 	bottom: 0;
 	background-color: rgba(255, 255, 255, 0.75);
 
-}
-
-.left {
-	float: left;
 }
