--- a/frontend/src/css/framework.css
+++ b/frontend/src/css/framework.css
@@ -10,61 +10,125 @@
 }
 
 .grid {
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 100%;
+        margin: 0 auto;
+        max-width: 1200px;
+        width: 100%;
 }
 
-.row {
-    width: 100%;
-    margin-bottom: 20px;
-    display: flex;
+ .row {
+        width: 100%;
+        margin-bottom: 20px;
+        display: flex;
+    }
+
+@media screen and (max-width: 899px){
+
+    .grid {
+        width: 100%;
+        padding: 50px;
+    }
+
+    .col-1-medium {
+        width: 8.33%;
+    }
+
+    .col-2-medium {
+        width: 16.66%;
+    }
+
+    .col-3-medium {
+        width: 25%;
+    }
+
+    .col-4-medium {
+        width: 33.33%;
+    }
+
+    .col-5-medium {
+        width: 41.66%;
+    }
+
+    .col-6-medium {
+        width: 50%;
+    }
+
+    .col-7-medium {
+        width: 58.33%;
+    }
+
+    .col-8-medium {
+        width: 66.66%;
+    }
+
+    .col-9-medium {
+        width: 75%;
+    }
+
+    .col-10-medium {
+        width: 83.33%;
+    }
+
+    .col-11-medium {
+        width: 91.66%;
+    }
+
+    .col-12-medium {
+        width: 100%;
+    }
+
 }
 
-.col-1 {
-    width: 8.33%;
-}
 
-.col-2 {
-    width: 16.66%;
-}
 
-.col-3 {
-    width: 25%;
-}
 
-.col-4 {
-    width: 33.33%;
-}
+@media screen and (min-width: 900px){
 
-.col-5 {
-    width: 41.66%;
-}
+    .col-1 {
+        width: 8.33%;
+    }
 
-.col-6 {
-    width: 50%;
-}
+    .col-2 {
+        width: 16.66%;
+    }
 
-.col-7 {
-    width: 58.33%;
-}
+    .col-3 {
+        width: 25%;
+    }
 
-.col-8 {
-    width: 66.66%;
-}
+    .col-4 {
+        width: 33.33%;
+    }
 
-.col-9 {
-    width: 75%;
-}
+    .col-5 {
+        width: 41.66%;
+    }
 
-.col-10 {
-    width: 83.33%;
-}
+    .col-6 {
+        width: 50%;
+    }
 
-.col-11 {
-    width: 91.66%;
-}
+    .col-7 {
+        width: 58.33%;
+    }
 
-.col-12 {
-    width: 100%;
+    .col-8 {
+        width: 66.66%;
+    }
+
+    .col-9 {
+        width: 75%;
+    }
+
+    .col-10 {
+        width: 83.33%;
+    }
+
+    .col-11 {
+        width: 91.66%;
+    }
+
+    .col-12 {
+        width: 100%;
+    }
+
 }
