--- a/frontend/src/css/mobile.css
+++ b/frontend/src/css/mobile.css
@@ -6,6 +6,14 @@
 	color: #FFF;
 }
 
+.mobile-menu .row {
+	margin: 0;
+}
+
+.mobile-menu ul {
+	padding-left: 0;
+}
+
 .mobile-menu-grid {
 	 width: 100%;
 	 margin: 0 auto;
@@ -16,12 +24,23 @@
 	display: flex;
 }
 
-.center {
-	margin: auto;
+.mobile-menu-link {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	padding: 15px 32px;
+	text-align: center;
+	color: #FFF;
+	font-size: 40px;
+	text-decoration: none;
 }
 
+.mobile-menu-link:hover {
 
-
+	background-color: #FFF;
+	color: #2C2C34;
+	border: 1px solid #2C2C34;
+}
 
 .mobile-menu ul {
 	list-style-type: none;
@@ -47,5 +66,9 @@
 
 .responsive {
 	display: block;
+}
+
+.center {
+	margin: auto;
 }
 
