--- a/frontend/src/css/comments.css
+++ b/frontend/src/css/comments.css
@@ -1,10 +1,16 @@
-.comments-grid {
-	border-radius: 2px;
-	padding: 20px;
-	width: 90%;
-	margin: 0 auto;
-	background-color: #978897;
+.comment{
+	margin-bottom: 30px;
+	border-bottom: 1px solid black;
 }
+
+.comments-grid {
+		border-radius: 2px;
+		margin: 0;
+		width: 100%;
+		margin: 0 auto;
+		background-color: #978897;
+		padding: 12px;
+	}
 
 .comments-section-title{
 
@@ -20,4 +26,44 @@
 
 .comment-body p{
 	margin: 0;
+}
+
+.edit-delete {
+	margin-left: 20px;
+}
+
+@media screen and (max-width: 900px){
+	.editbutton {
+		font-size: 50px;
+		background-color: none;
+	}
+
+	.deletebutton {
+		font-size: 50px;
+	}
+
+	.edit-delete button{
+		font-size: 30px;
+	}
+
+	.comment-likes button {
+		font-size: 30px;
+	}
+
+
+}
+
+
+@media screen and (min-width: 900px){
+	
+
+	.comments-grid {
+		border-radius: 2px;
+		padding: 20px;
+		width: 90%;
+		margin: 0 auto;
+		background-color: #978897;
+	}
+
+
 }
