--- a/frontend/src/css/mobile.css
+++ b/frontend/src/css/mobile.css
@@ -133,3 +133,24 @@
 }
 
 
+.mobile_form .row {
+	margin-top: 20px;
+}
+
+.mobile_form select {
+	width: 100%;
+	height: 30px;
+	border-radius: 2px;
+}
+
+.mobile_form input {
+	width: 100%;
+	height: 30px;
+	border-radius: 2px;
+}
+
+.mobile_form textarea {
+	width: 100%;
+	height: 100px;
+	border-radius: 2px;
+}
